include/mcp/c_api/mcp_c_filter_api.h

typedef uint64_t mcp_buffer_handle_t;
// Post completion callback
typedef void (*mcp_post_completion_cb)(mcp_result_t result, void* user_data);
// Request callback for server
typedef void (*mcp_filter_request_cb)(mcp_buffer_handle_t response_buffer,
                                      mcp_result_t result,
                                      void* user_data);
// Server context for filtered operations
typedef struct mcp_filter_server_context {
  mcp_server_t server;
  mcp_filter_chain_t request_filters;
  mcp_filter_chain_t response_filters;
} mcp_filter_server_context_t;
/**
 * Process server request through filters
 * @param context Server filter context
 * @param request_id Request ID
 * @param request_buffer Request buffer
 * @param callback Request callback
 * @param user_data User data for callback
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_server_process_filtered(mcp_filter_server_context_t* context,
                            mcp_request_id_t request_id,
                            mcp_buffer_handle_t request_buffer,
                            mcp_filter_request_cb callback,
                            void* user_data) MCP_NOEXCEPT;
/* ============================================================================
 * Thread-Safe Operations
 * ============================================================================
 */

/**
 * Post data to filter from any thread
 * @param filter Filter handle
 * @param data Data to post
 * @param length Data length
 * @param callback Completion callback
 * @param user_data User data for callback
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_filter_post_data(mcp_filter_t filter,
                                          const uint8_t* data,
                                          size_t length,
                                          mcp_post_completion_cb callback,
                                          void* user_data) MCP_NOEXCEPT;
/* ============================================================================
 * Memory Management
 * ============================================================================
 */

// Filter resource guard for RAII
typedef struct mcp_filter_resource_guard mcp_filter_resource_guard_t;
/**
 * Create filter resource guard
 * @param dispatcher Event dispatcher
 * @return Resource guard or NULL on error
 */
MCP_API mcp_filter_resource_guard_t* mcp_filter_guard_create(
    mcp_dispatcher_t dispatcher) MCP_NOEXCEPT;
/**
 * Add filter to resource guard
 * @param guard Resource guard
 * @param filter Filter to track
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_filter_guard_add_filter(
    mcp_filter_resource_guard_t* guard, mcp_filter_t filter) MCP_NOEXCEPT;
/**
 * Release resource guard (cleanup all tracked resources)
 * @param guard Resource guard
 */
MCP_API void mcp_filter_guard_release(mcp_filter_resource_guard_t* guard)
    MCP_NOEXCEPT;
/* ============================================================================
 * Buffer Pool Management
 * ============================================================================
 */

typedef struct mcp_buffer_pool* mcp_buffer_pool_t;
/**
 * Create buffer pool
 * @param buffer_size Size of each buffer
 * @param max_buffers Maximum buffers in pool
 * @return Buffer pool handle or NULL on error
 */
MCP_API mcp_buffer_pool_t
mcp_buffer_pool_create(size_t buffer_size, size_t max_buffers) MCP_NOEXCEPT;
/**
 * Acquire buffer from pool
 * @param pool Buffer pool
 * @return Buffer handle or 0 if pool exhausted
 */
MCP_API mcp_buffer_handle_t mcp_buffer_pool_acquire(mcp_buffer_pool_t pool)
    MCP_NOEXCEPT;
/**
 * Release buffer back to pool
 * @param pool Buffer pool
 * @param buffer Buffer to release
 */
MCP_API void mcp_buffer_pool_release(mcp_buffer_pool_t pool,
                                     mcp_buffer_handle_t buffer) MCP_NOEXCEPT;
/**
 * Destroy buffer pool
 * @param pool Buffer pool
 */
MCP_API void mcp_buffer_pool_destroy(mcp_buffer_pool_t pool) MCP_NOEXCEPT;
/* ============================================================================
 * Statistics and Monitoring
 * ============================================================================
 */

typedef struct mcp_filter_stats {
  uint64_t bytes_processed;
  uint64_t packets_processed;
  uint64_t errors;
  uint64_t processing_time_us;
  double throughput_mbps;
} mcp_filter_stats_t;
/**
 * Get filter statistics
 * @param filter Filter handle
 * @param stats Output statistics
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_filter_get_stats(
    mcp_filter_t filter, mcp_filter_stats_t* stats) MCP_NOEXCEPT;
/**
 * Reset filter statistics
 * @param filter Filter handle
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_filter_reset_stats(mcp_filter_t filter) MCP_NOEXCEPT;