sdk/java/gopher-mcp/src/main/java/com/gopher/mcp/jna/McpFilterLibrary.java


  /**
   * Process server request through filters (line 529)
   *
   * @param context Server filter context
   * @param request_id Request ID
   * @param request_buffer Request buffer
   * @param callback Request callback
   * @param user_data User data for callback
   * @return MCP_OK on success
   */
  int mcp_server_process_filtered(
      McpFilterServerContext.ByReference context,
      long request_id,
      long request_buffer,
      MCP_FILTER_REQUEST_CB callback,
      Pointer user_data);

  /* ============================================================================
   * Thread-Safe Operations (lines 537-555)
   * ============================================================================
   */

  /**
   * Post data to filter from any thread (line 550)
   *
   * @param filter Filter handle
   * @param data Data to post
   * @param length Data length
   * @param callback Completion callback
   * @param user_data User data for callback
   * @return MCP_OK on success
   */
  int mcp_filter_post_data(
      long filter,
      byte[] data,
      NativeLong length,
      MCP_POST_COMPLETION_CB callback,
      Pointer user_data);

  /* ============================================================================
   * Memory Management (lines 557-587)
   * ============================================================================
   */

  /**
   * Create filter resource guard (line 569)
   *
   * @param dispatcher Event dispatcher
   * @return Resource guard or NULL on error
   */
  Pointer mcp_filter_guard_create(Pointer dispatcher);

  /**
   * Add filter to resource guard (line 578)
   *
   * @param guard Resource guard
   * @param filter Filter to track
   * @return MCP_OK on success
   */
  int mcp_filter_guard_add_filter(Pointer guard, long filter);

  /**
   * Release resource guard (cleanup all tracked resources) (line 585)
   *
   * @param guard Resource guard
   */
  void mcp_filter_guard_release(Pointer guard);

  /* ============================================================================
   * Buffer Pool Management (lines 589-625)
   * ============================================================================
   */

  /**
   * Create buffer pool (line 601)
   *
   * @param buffer_size Size of each buffer
   * @param max_buffers Maximum buffers in pool
   * @return Buffer pool handle or NULL on error
   */
  Pointer mcp_buffer_pool_create(NativeLong buffer_size, NativeLong max_buffers);

  /**
   * Acquire buffer from pool (line 609)
   *
   * @param pool Buffer pool
   * @return Buffer handle or 0 if pool exhausted
   */
  long mcp_buffer_pool_acquire(Pointer pool);

  /**
   * Release buffer back to pool (line 617)
   *
   * @param pool Buffer pool
   * @param buffer Buffer to release
   */
  void mcp_buffer_pool_release(Pointer pool, long buffer);

  /**
   * Destroy buffer pool (line 624)
   *
   * @param pool Buffer pool
   */
  void mcp_buffer_pool_destroy(Pointer pool);

  /* ============================================================================
   * Statistics and Monitoring (lines 627-654)
   * ============================================================================
   */

  /**
   * Get filter statistics (line 645)
   *
   * @param filter Filter handle
   * @param stats Output statistics
   * @return MCP_OK on success
   */
  int mcp_filter_get_stats(long filter, McpFilterStats.ByReference stats);

  /**
   * Reset filter statistics (line 653)
   *
   * @param filter Filter handle
   * @return MCP_OK on success
   */
  int mcp_filter_reset_stats(long filter);
}
